include/plplot.h

typedef double   PLFLT;
typedef float    PLFLT;
typedef uint32_t       PLUINT;
typedef int32_t        PLINT;
typedef unsigned int   PLUINT;
typedef int            PLINT;
typedef PLUINT   PLUNICODE;
typedef PLINT    PLBOOL;
typedef void*    PLPointer;
typedef struct
{
    int          type;              
    unsigned int state;             
    unsigned int keysym;            
    unsigned int button;            
    PLINT        subwindow;         
    char         string[PL_MAXKEY]; 
    int          pX, pY;            
    PLFLT        dX, dY;            
    PLFLT        wX, wY;            
} PLGraphicsIn;
#define    plbin                    c_plbin
#define    plgriddata               c_plgriddata
#define    plhist                   c_plhist
#define    plot3dc                  c_plot3dc
#define    plsurf3d                 c_plsurf3d
PLDLLIMPEXP void
c_plcont( PLFLT **f, PLINT nx, PLINT ny, PLINT kx, PLINT lx,
          PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plfcont( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
         PLPointer f2eval_data,
         PLINT nx, PLINT ny, PLINT kx, PLINT lx,
         PLINT ky, PLINT ly, PLFLT *clevel, PLINT nlevel,
         void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
         PLPointer pltr_data );
PLDLLIMPEXP void
c_plgcol0( PLINT icol0, PLINT *r, PLINT *g, PLINT *b );
PLDLLIMPEXP void
c_plgcol0a( PLINT icol0, PLINT *r, PLINT *g, PLINT *b, PLFLT *a );
PLDLLIMPEXP void
c_plgcolbg( PLINT *r, PLINT *g, PLINT *b );
PLDLLIMPEXP void
c_plgcolbga( PLINT *r, PLINT *g, PLINT *b, PLFLT *a );
PLDLLIMPEXP void
c_plgcompression( PLINT *compression );
PLDLLIMPEXP void
c_plgdev( char *p_dev );
PLDLLIMPEXP void
c_plgdidev( PLFLT *p_mar, PLFLT *p_aspect, PLFLT *p_jx, PLFLT *p_jy );
PLDLLIMPEXP void
c_plgdiori( PLFLT *p_rot );
PLDLLIMPEXP void
c_plgdiplt( PLFLT *p_xmin, PLFLT *p_ymin, PLFLT *p_xmax, PLFLT *p_ymax );
PLDLLIMPEXP void
c_plgfci( PLUNICODE *pfci );
PLDLLIMPEXP void
c_plgfam( PLINT *p_fam, PLINT *p_num, PLINT *p_bmax );
PLDLLIMPEXP void
c_plgfnam( char *fnam );
PLDLLIMPEXP void
c_plgfont( PLINT *p_family, PLINT *p_style, PLINT *p_weight );
PLDLLIMPEXP void
c_plglevel( PLINT *p_level );
PLDLLIMPEXP void
c_plgpage( PLFLT *p_xp, PLFLT *p_yp,
           PLINT *p_xleng, PLINT *p_yleng, PLINT *p_xoff, PLINT *p_yoff );
PLDLLIMPEXP void
c_plgra( void );
PLDLLIMPEXP void
c_plgriddata( PLFLT *x, PLFLT *y, PLFLT *z, PLINT npts,
              PLFLT *xg, PLINT nptsx, PLFLT *yg, PLINT nptsy,
              PLFLT **zg, PLINT type, PLFLT data );
#define GRID_CSA       1 
#define GRID_DTLI      2 
#define GRID_NNI       3 
#define GRID_NNIDW     4 
#define GRID_NNLI      5 
#define GRID_NNAIDW    6 
PLDLLIMPEXP void
c_plgspa( PLFLT *xmin, PLFLT *xmax, PLFLT *ymin, PLFLT *ymax );
PLDLLIMPEXP void
c_plgstrm( PLINT *p_strm );
PLDLLIMPEXP void
c_plgver( char *p_ver );
PLDLLIMPEXP void
c_plgvpd( PLFLT *p_xmin, PLFLT *p_xmax, PLFLT *p_ymin, PLFLT *p_ymax );
PLDLLIMPEXP void
c_plgvpw( PLFLT *p_xmin, PLFLT *p_xmax, PLFLT *p_ymin, PLFLT *p_ymax );
PLDLLIMPEXP void
c_plgxax( PLINT *p_digmax, PLINT *p_digits );
PLDLLIMPEXP void
c_plgyax( PLINT *p_digmax, PLINT *p_digits );
PLDLLIMPEXP void
c_plgzax( PLINT *p_digmax, PLINT *p_digits );
#define PL_HIST_DEFAULT            0
#define PL_HIST_NOSCALING          1
#define PL_HIST_IGNORE_OUTLIERS    2
#define PL_HIST_NOEXPAND           8
#define PL_HIST_NOEMPTY            16
PLDLLIMPEXP void
c_plhist( PLINT n, PLFLT *data, PLFLT datmin, PLFLT datmax,
          PLINT nbin, PLINT opt );
PLDLLIMPEXP void
c_plhlsrgb( PLFLT h, PLFLT l, PLFLT s, PLFLT *p_r, PLFLT *p_g, PLFLT *p_b );
PLDLLIMPEXP void
c_plinit( void );
PLDLLIMPEXP void
c_pljoin( PLFLT x1, PLFLT y1, PLFLT x2, PLFLT y2 );
PLDLLIMPEXP void
c_pllab( const char *xlabel, const char *ylabel, const char *tlabel );
PLDLLIMPEXP void
c_pllightsource( PLFLT x, PLFLT y, PLFLT z );
PLDLLIMPEXP void
c_plline( PLINT n, PLFLT *x, PLFLT *y );
PLDLLIMPEXP void
c_plline3( PLINT n, PLFLT *x, PLFLT *y, PLFLT *z );
PLDLLIMPEXP void
c_pllsty( PLINT lin );
PLDLLIMPEXP void
c_plmap( void ( *mapform )( PLINT, PLFLT *, PLFLT * ), const char *type,
         PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat );
PLDLLIMPEXP void
c_plmeridians( void ( *mapform )( PLINT, PLFLT *, PLFLT * ),
               PLFLT dlong, PLFLT dlat,
               PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat );
PLDLLIMPEXP void
c_plmesh( PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt );
PLDLLIMPEXP void
c_plmeshc( PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt,
           PLFLT *clevel, PLINT nlevel );
PLDLLIMPEXP void
c_plmkstrm( PLINT *p_strm );
PLDLLIMPEXP void
c_plmtex( const char *side, PLFLT disp, PLFLT pos, PLFLT just,
          const char *text );
PLDLLIMPEXP void
c_plmtex3( const char *side, PLFLT disp, PLFLT pos, PLFLT just,
           const char *text );
PLDLLIMPEXP void
c_plot3d( PLFLT *x, PLFLT *y, PLFLT **z,
          PLINT nx, PLINT ny, PLINT opt, PLBOOL side );
PLDLLIMPEXP void
c_plot3dc( PLFLT *x, PLFLT *y, PLFLT **z,
           PLINT nx, PLINT ny, PLINT opt,
           PLFLT *clevel, PLINT nlevel );
PLDLLIMPEXP void
c_plot3dcl( PLFLT *x, PLFLT *y, PLFLT **z,
            PLINT nx, PLINT ny, PLINT opt,
            PLFLT *clevel, PLINT nlevel,
            PLINT ixstart, PLINT ixn, PLINT *indexymin, PLINT*indexymax );
#define DRAW_LINEX     ( 1 << 0 )                  
#define DRAW_LINEY     ( 1 << 1 )                  
#define DRAW_LINEXY    ( DRAW_LINEX | DRAW_LINEY ) 
#define MAG_COLOR      ( 1 << 2 )                  
#define BASE_CONT      ( 1 << 3 )                  
#define TOP_CONT       ( 1 << 4 )                  
#define SURF_CONT      ( 1 << 5 )                  
#define DRAW_SIDES     ( 1 << 6 )                  
#define FACETED        ( 1 << 7 )                  
#define MESH           ( 1 << 8 )                  
PLDLLIMPEXP void
c_plpat( PLINT nlin, PLINT *inc, PLINT *del );
PLDLLIMPEXP void
c_plpoin( PLINT n, PLFLT *x, PLFLT *y, PLINT code );
PLDLLIMPEXP void
c_plpoin3( PLINT n, PLFLT *x, PLFLT *y, PLFLT *z, PLINT code );
PLDLLIMPEXP void
c_plpoly3( PLINT n, PLFLT *x, PLFLT *y, PLFLT *z, PLBOOL *draw, PLBOOL ifcc );
PLDLLIMPEXP void
c_plprec( PLINT setp, PLINT prec );
PLDLLIMPEXP void
c_plpsty( PLINT patt );
PLDLLIMPEXP void
c_plptex( PLFLT x, PLFLT y, PLFLT dx, PLFLT dy, PLFLT just, const char *text );
PLDLLIMPEXP void
c_plptex3( PLFLT wx, PLFLT wy, PLFLT wz, PLFLT dx, PLFLT dy, PLFLT dz,
           PLFLT sx, PLFLT sy, PLFLT sz, PLFLT just, const char *text );
PLDLLIMPEXP void
c_plreplot( void );
PLDLLIMPEXP void
c_plrgbhls( PLFLT r, PLFLT g, PLFLT b, PLFLT *p_h, PLFLT *p_l, PLFLT *p_s );
PLDLLIMPEXP void
c_plschr( PLFLT def, PLFLT scale );
PLDLLIMPEXP void
c_plscmap0( PLINT *r, PLINT *g, PLINT *b, PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap0a( PLINT *r, PLINT *g, PLINT *b, PLFLT *a, PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap0n( PLINT ncol0 );
PLDLLIMPEXP void
c_plscmap1( PLINT *r, PLINT *g, PLINT *b, PLINT ncol1 );
PLDLLIMPEXP void
c_plscmap1a( PLINT *r, PLINT *g, PLINT *b, PLFLT *a, PLINT ncol1 );
PLDLLIMPEXP void
c_plscmap1l( PLBOOL itype, PLINT npts, PLFLT *intensity,
             PLFLT *coord1, PLFLT *coord2, PLFLT *coord3, PLBOOL *rev );
PLDLLIMPEXP void
c_plscmap1la( PLBOOL itype, PLINT npts, PLFLT *intensity,
              PLFLT *coord1, PLFLT *coord2, PLFLT *coord3, PLFLT *a, PLBOOL *rev );
PLDLLIMPEXP void
c_plscmap1n( PLINT ncol1 );
PLDLLIMPEXP void
c_plscol0( PLINT icol0, PLINT r, PLINT g, PLINT b );
PLDLLIMPEXP void
c_plscol0a( PLINT icol0, PLINT r, PLINT g, PLINT b, PLFLT a );
PLDLLIMPEXP void
c_plscolbg( PLINT r, PLINT g, PLINT b );
PLDLLIMPEXP void
c_plscolbga( PLINT r, PLINT g, PLINT b, PLFLT a );
PLDLLIMPEXP void
c_plscolor( PLINT color );
PLDLLIMPEXP void
c_plscompression( PLINT compression );
PLDLLIMPEXP void
c_plsdev( const char *devname );
PLDLLIMPEXP void
c_plsdidev( PLFLT mar, PLFLT aspect, PLFLT jx, PLFLT jy );
PLDLLIMPEXP void
c_plsdimap( PLINT dimxmin, PLINT dimxmax, PLINT dimymin, PLINT dimymax,
            PLFLT dimxpmm, PLFLT dimypmm );
PLDLLIMPEXP void
c_plsdiori( PLFLT rot );
PLDLLIMPEXP void
c_plsdiplt( PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax );
PLDLLIMPEXP void
c_plsdiplz( PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax );
PLDLLIMPEXP void
c_plsesc( char esc );
PLDLLIMPEXP void
c_plsfam( PLINT fam, PLINT num, PLINT bmax );
PLDLLIMPEXP void
c_plsfci( PLUNICODE fci );
PLDLLIMPEXP void
c_plsfnam( const char *fnam );
PLDLLIMPEXP void
c_plsfont( PLINT family, PLINT style, PLINT weight );
PLDLLIMPEXP void
c_plshade( PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
           PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
           PLFLT shade_min, PLFLT shade_max,
           PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
           PLINT min_color, PLINT min_width,
           PLINT max_color, PLINT max_width,
           void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
           void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
           PLPointer pltr_data );
PLDLLIMPEXP void
c_plshade1( PLFLT *a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
            PLFLT shade_min, PLFLT shade_max,
            PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
            PLINT min_color, PLINT min_width,
            PLINT max_color, PLINT max_width,
            void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
c_plshades( PLFLT **a, PLINT nx, PLINT ny, PLINT ( *defined )( PLFLT, PLFLT ),
            PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax,
            PLFLT *clevel, PLINT nlevel, PLINT fill_width,
            PLINT cont_color, PLINT cont_width,
            void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
            void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
            PLPointer pltr_data );
PLDLLIMPEXP void
plfshade( PLFLT ( *f2eval )( PLINT, PLINT, PLPointer ),
          PLPointer f2eval_data,
          PLFLT ( *c2eval )( PLINT, PLINT, PLPointer ),
          PLPointer c2eval_data,
          PLINT nx, PLINT ny,
          PLFLT left, PLFLT right, PLFLT bottom, PLFLT top,
          PLFLT shade_min, PLFLT shade_max,
          PLINT sh_cmap, PLFLT sh_color, PLINT sh_width,
          PLINT min_color, PLINT min_width,
          PLINT max_color, PLINT max_width,
          void ( *fill )( PLINT, PLFLT *, PLFLT * ), PLBOOL rectangular,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
c_plslabelfunc( void ( *label_func )( PLINT, PLFLT, char *, PLINT, PLPointer ),
                PLPointer label_data );
PLDLLIMPEXP void
c_plimagefr( PLFLT **idata, PLINT nx, PLINT ny,
             PLFLT xmin, PLFLT xmax, PLFLT ymin, PLFLT ymax, PLFLT zmin, PLFLT zmax,
             PLFLT valuemin, PLFLT valuemax,
             void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
             PLPointer pltr_data );
PLDLLIMPEXP void
c_plvect( PLFLT **u, PLFLT **v, PLINT nx, PLINT ny, PLFLT scale,
          void ( *pltr )( PLFLT, PLFLT, PLFLT *, PLFLT *, PLPointer ),
          PLPointer pltr_data );
PLDLLIMPEXP void
plsKeyEH( void ( *KeyEH )( PLGraphicsIn *, void *, int * ), void *KeyEH_data );
PLDLLIMPEXP void
plsButtonEH( void ( *ButtonEH )( PLGraphicsIn *, void *, int * ),
             void *ButtonEH_data );
PLDLLIMPEXP void
plsbopH( void ( *handler )( void *, int * ), void *handler_data );
PLDLLIMPEXP void
plseopH( void ( *handler )( void *, int * ), void *handler_data );
PLDLLIMPEXP void
plsabort( void ( *handler )( const char * ));
PLDLLIMPEXP void
c_plhls( PLFLT h, PLFLT l, PLFLT s );
PLDLLIMPEXP void
c_plrgb( PLFLT r, PLFLT g, PLFLT b );
PLDLLIMPEXP void
c_plrgb1( PLINT r, PLINT g, PLINT b );