bindings/d/plplot.d


/* Returns 8 bit RGB values for given color from color map 0 */

void  c_plgcol0(PLINT icol0, PLINT *r, PLINT *g, PLINT *b);

/* Returns 8 bit RGB values for given color from color map 0 and alpha value */

void  c_plgcol0a(PLINT icol0, PLINT *r, PLINT *g, PLINT *b, PLFLT *a);

/* Returns the background color by 8 bit RGB value */

void  c_plgcolbg(PLINT *r, PLINT *g, PLINT *b);

/* Returns the background color by 8 bit RGB value and alpha value */

void  c_plgcolbga(PLINT *r, PLINT *g, PLINT *b, PLFLT *a);

/* Returns the current compression setting */

void  c_plgcompression(PLINT *compression);

/* Get the current device (keyword) name */

void  c_plgdev(char *p_dev);

/* Retrieve current window into device space */

void  c_plgdidev(PLFLT *p_mar, PLFLT *p_aspect, PLFLT *p_jx, PLFLT *p_jy);

/* Get plot orientation */

void  c_plgdiori(PLFLT *p_rot);

/* Retrieve current window into plot space */

void  c_plgdiplt(PLFLT *p_xmin, PLFLT *p_ymin, PLFLT *p_xmax, PLFLT *p_ymax);

/* Get FCI (font characterization integer) */

void  c_plgfci(PLUNICODE *pfci);

/* Get family file parameters */

void  c_plgfam(PLINT *p_fam, PLINT *p_num, PLINT *p_bmax);

/* Get the (current) output file name.  Must be preallocated to >80 bytes */

void  c_plgfnam(char *fnam);

/* Get the current font family, style and weight */

void  c_plgfont(PLINT *p_family, PLINT *p_style, PLINT *p_weight);

/* Get the (current) run level.  */

void  c_plglevel(PLINT *p_level);

/* Get output device parameters. */

void  c_plgpage(PLFLT *p_xp, PLFLT *p_yp, PLINT *p_xleng, PLINT *p_yleng, PLINT *p_xoff, PLINT *p_yoff);

/* Switches to graphics screen. */

void  c_plgra();

  /* grid irregularly sampled data */

void  c_plgriddata(PLFLT *x, PLFLT *y, PLFLT *z, PLINT npts, PLFLT *xg, PLINT nptsx, PLFLT *yg, PLINT nptsy, PLFLT **zg, PLINT type, PLFLT data);

  /* type of gridding algorithm for plgriddata() */

const GRID_CSA = 1;
const GRID_DTLI = 2;
const GRID_NNI = 3;
const GRID_NNIDW = 4;
const GRID_NNLI = 5;

const GRID_NNAIDW = 6;
/* Get subpage boundaries in absolute coordinates */

void  c_plgspa(PLFLT *xmin, PLFLT *xmax, PLFLT *ymin, PLFLT *ymax);

/* Get current stream number. */

void  c_plgstrm(PLINT *p_strm);

/* Get the current library version number */

void  c_plgver(char *p_ver);

/* Get viewport boundaries in normalized device coordinates */

void  c_plgvpd(PLFLT *p_xmin, PLFLT *p_xmax, PLFLT *p_ymin, PLFLT *p_ymax);

/* Get viewport boundaries in world coordinates */

void  c_plgvpw(PLFLT *p_xmin, PLFLT *p_xmax, PLFLT *p_ymin, PLFLT *p_ymax);

/* Get x axis labeling parameters */

void  c_plgxax(PLINT *p_digmax, PLINT *p_digits);

/* Get y axis labeling parameters */

void  c_plgyax(PLINT *p_digmax, PLINT *p_digits);

/* Get z axis labeling parameters */

void  c_plgzax(PLINT *p_digmax, PLINT *p_digits);

/* Draws a histogram of n values of a variable in array data[0..n-1] */

/* Flags for plhist() - opt argument; note: some flags are passed to
   plbin() for the actual plotting */
const PL_HIST_DEFAULT = 0;
const PL_HIST_NOSCALING = 1;
const PL_HIST_IGNORE_OUTLIERS = 2;
const PL_HIST_NOEXPAND = 8;

const PL_HIST_NOEMPTY = 16;
void  c_plhist(PLINT n, PLFLT *data, PLFLT datmin, PLFLT datmax, PLINT nbin, PLINT opt);

/* Set current color (map 0) by hue, lightness, and saturation. */

void  c_plhls(PLFLT h, PLFLT l, PLFLT s);

/* Functions for converting between HLS and RGB color space */

void  c_plhlsrgb(PLFLT h, PLFLT l, PLFLT s, PLFLT *p_r, PLFLT *p_g, PLFLT *p_b);

/* Initializes PLplot, using preset or default options */

void  c_plinit();

/* Draws a line segment from (x1, y1) to (x2, y2). */

void  c_pljoin(PLFLT x1, PLFLT y1, PLFLT x2, PLFLT y2);

/* Simple routine for labelling graphs. */

void  c_pllab(char *xlabel, char *ylabel, char *tlabel);

/* Sets position of the light source */
void  c_pllightsource(PLFLT x, PLFLT y, PLFLT z);

/* Draws line segments connecting a series of points. */
void c_plline(PLINT n, PLFLT *x, PLFLT *y);

/* Draws a line in 3 space.  */

void  c_plline3(PLINT n, PLFLT *x, PLFLT *y, PLFLT *z);

/* Set line style. */

void  c_pllsty(PLINT lin);

/* plot continental outline in world coordinates */

void  c_plmap(void  function(PLINT , PLFLT *, PLFLT *)mapform, char *type, PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat);

/* Plot the latitudes and longitudes on the background. */

void  c_plmeridians(void  function(PLINT , PLFLT *, PLFLT *)mapform, PLFLT dlong, PLFLT dlat, PLFLT minlong, PLFLT maxlong, PLFLT minlat, PLFLT maxlat);

/* Plots a mesh representation of the function z[x][y]. */

void  c_plmesh(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt);

/* Plots a mesh representation of the function z[x][y] with contour */

void  c_plmeshc(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt, PLFLT *clevel, PLINT nlevel);

/* Creates a new stream and makes it the default.  */

void  c_plmkstrm(PLINT *p_strm);

/* Prints out "text" at specified position relative to viewport */
void c_plmtex(char *side, PLFLT disp, PLFLT pos, PLFLT just, char *text);

/* Prints out "text" at specified position relative to viewport (3D)*/

void  c_plmtex3(char *side, PLFLT disp, PLFLT pos, PLFLT just, char *text);
	 
/* Plots a 3-d representation of the function z[x][y]. */

void  c_plot3d(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt, PLBOOL side);

/* Plots a 3-d representation of the function z[x][y] with contour. */

void  c_plot3dc(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt, PLFLT *clevel, PLINT nlevel);

/* Plots a 3-d representation of the function z[x][y] with contour and
 * y index limits. */

void  c_plot3dcl(PLFLT *x, PLFLT *y, PLFLT **z, PLINT nx, PLINT ny, PLINT opt, PLFLT *clevel, PLINT nlevel, PLINT ixstart, PLINT ixn, PLINT *indexymin, PLINT *indexymax);

/*
 * definitions for the opt argument in plot3dc() and plsurf3d()
 *
 * DRAW_LINEX *must* be 1 and DRAW_LINEY *must* be 2, because of legacy code!
 */
const DRAW_LINEX=1<<0; /* draw lines parallel to the X axis */
const DRAW_LINEY=1<<1; /* draw lines parallel to the Y axis */
const DRAW_LINEXY=DRAW_LINEX|DRAW_LINEY; /* draw lines parallel to both the X and Y axis */
const MAG_COLOR=1<<2; /* draw the mesh with a color dependent of the magnitude */
const BASE_CONT=1<<3; /* draw contour plot at bottom xy plane */
const TOP_CONT=1<<4; /* draw contour plot at top xy plane */
const SURF_CONT=1<<5; /* draw contour plot at surface */
const DRAW_SIDES=1<<6; /* draw sides */
const FACETED=1<<7; /* draw outline for each square that makes up the surface */
const MESH=1<<8; /* draw mesh */

  /*
   *  valid options for plot3dc():
   *
   *  DRAW_SIDES, BASE_CONT, TOP_CONT (not yet),
   *  MAG_COLOR, DRAW_LINEX, DRAW_LINEY, DRAW_LINEXY.
   *
   *  valid options for plsurf3d():
   *
   *  MAG_COLOR, BASE_CONT, SURF_CONT, FACETED, DRAW_SIDES.
   */

/* Set fill pattern directly. */

void  c_plpat(PLINT nlin, PLINT *inc, PLINT *del);

/* Plots array y against x for n points using ASCII code "code".*/

void  c_plpoin(PLINT n, PLFLT *x, PLFLT *y, PLINT code);

/* Draws a series of points in 3 space. */

void  c_plpoin3(PLINT n, PLFLT *x, PLFLT *y, PLFLT *z, PLINT code);

/* Draws a polygon in 3 space.  */

void  c_plpoly3(PLINT n, PLFLT *x, PLFLT *y, PLFLT *z, PLBOOL *draw, PLBOOL ifcc);

/* Set the floating point precision (in number of places) in numeric labels. */

void  c_plprec(PLINT setp, PLINT prec);

/* Set fill pattern, using one of the predefined patterns.*/

void  c_plpsty(PLINT patt);

/* Prints out "text" at world cooordinate (x,y). */
void c_plptex(PLFLT x, PLFLT y, PLFLT dx, PLFLT dy, PLFLT just, char *text);

/* Prints out "text" at world cooordinate (x,y,z). */

void  c_plptex3(PLFLT wx, PLFLT wy, PLFLT wz, PLFLT dx, PLFLT dy, PLFLT dz, PLFLT sx, PLFLT sy, PLFLT sz, PLFLT just, char *text);

/* Replays contents of plot buffer to current device/file. */

void  c_plreplot();

/* Set line color by red, green, blue from  0. to 1. */

void  c_plrgb(PLFLT r, PLFLT g, PLFLT b);

/* Set line color by 8 bit RGB values. */

void  c_plrgb1(PLINT r, PLINT g, PLINT b);

/* Functions for converting between HLS and RGB color space */

void  c_plrgbhls(PLFLT r, PLFLT g, PLFLT b, PLFLT *p_h, PLFLT *p_l, PLFLT *p_s);

/* Set character height. */

void  c_plschr(PLFLT def, PLFLT scale);

/* Set color map 0 colors by 8 bit RGB values */

void  c_plscmap0(PLINT *r, PLINT *g, PLINT *b, PLINT ncol0);

/* Set color map 0 colors by 8 bit RGB values and alpha values */

void  c_plscmap0a(PLINT *r, PLINT *g, PLINT *b, PLFLT *a, PLINT ncol0);

/* Set number of colors in cmap 0 */

void  c_plscmap0n(PLINT ncol0);

/* Set color map 1 colors by 8 bit RGB values */

void  c_plscmap1(PLINT *r, PLINT *g, PLINT *b, PLINT ncol1);

/* Set color map 1 colors by 8 bit RGB and alpha values */

void  c_plscmap1a(PLINT *r, PLINT *g, PLINT *b, PLFLT *a, PLINT ncol1);

/* Set color map 1 colors using a piece-wise linear relationship between */
/* intensity [0,1] (cmap 1 index) and position in HLS or RGB color space. */

void  c_plscmap1l(PLBOOL itype, PLINT npts, PLFLT *intensity, PLFLT *coord1, PLFLT *coord2, PLFLT *coord3, PLBOOL *rev);

/* Set color map 1 colors using a piece-wise linear relationship between */
/* intensity [0,1] (cmap 1 index) and position in HLS or RGB color space. */
/* Will also linear interpolate alpha values. */

void  c_plscmap1la(PLBOOL itype, PLINT npts, PLFLT *intensity, PLFLT *coord1, PLFLT *coord2, PLFLT *coord3, PLFLT *a, PLBOOL *rev);

/* Set number of colors in cmap 1 */

void  c_plscmap1n(PLINT ncol1);

/* Set a given color from color map 0 by 8 bit RGB value */

void  c_plscol0(PLINT icol0, PLINT r, PLINT g, PLINT b);

/* Set a given color from color map 0 by 8 bit RGB value */

void  c_plscol0a(PLINT icol0, PLINT r, PLINT g, PLINT b, PLFLT a);

/* Set the background color by 8 bit RGB value */

void  c_plscolbg(PLINT r, PLINT g, PLINT b);

/* Set the background color by 8 bit RGB value and alpha value*/

void  c_plscolbga(PLINT r, PLINT g, PLINT b, PLFLT a);

/* Used to globally turn color output on/off */

void  c_plscolor(PLINT color);

/* Set the compression level */

void  c_plscompression(PLINT compression);

/* Set the device (keyword) name */
void c_plsdev(char *devname);

/* Set window into device space using margin, aspect ratio, and */
/* justification */

void  c_plsdidev(PLFLT mar, PLFLT aspect, PLFLT jx, PLFLT jy);

/* Set up transformation from metafile coordinates. */

void  c_plsdimap(PLINT dimxmin, PLINT dimxmax, PLINT dimymin, PLINT dimymax, PLFLT dimxpmm, PLFLT dimypmm);

/* Set plot orientation, specifying rotation in units of pi/2. */

void  c_plsdiori(PLFLT rot);

/* Set window into plot space */

void  c_plsdiplt(PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax);

/* Set window into plot space incrementally (zoom) */

void  c_plsdiplz(PLFLT xmin, PLFLT ymin, PLFLT xmax, PLFLT ymax);

/* Set the escape character for text strings. */

void  c_plsesc(char esc);

/* Set family file parameters */

void  c_plsfam(PLINT fam, PLINT num, PLINT bmax);

/* Set FCI (font characterization integer) */

void  c_plsfci(PLUNICODE fci);

/* Set the output file name. */
void c_plsfnam(char *fnam);

/* Set the current font family, style and weight */

void  c_plsfont(PLINT family, PLINT style, PLINT weight);

/* Shade region. */

void  c_plshade(PLFLT **a, PLINT nx, PLINT ny, PLINT  function(PLFLT , PLFLT )defined, PLFLT left, PLFLT right, PLFLT bottom, PLFLT top, PLFLT shade_min, PLFLT shade_max, PLINT sh_cmap, PLFLT sh_color, PLINT sh_width, PLINT min_color, PLINT min_width, PLINT max_color, PLINT max_width, void  function(PLINT , PLFLT *, PLFLT *)fill, PLBOOL rectangular, void  function(PLFLT , PLFLT , PLFLT *, PLFLT *, PLPointer )pltr, PLPointer pltr_data);
